dsp-cli/tests/snapshots/project_dump_snapshots__project_dump_prose.snap
---
source: tests/project_dump_snapshots.rs
expression: buf_to_string(&buf)
---
Wrote ./0001-20260529T120000Z.zip (12345678 bytes).
