dsp-cli/tests/snapshots/project_dump_snapshots__project_dump_prose_cleaned_up.snap
---
source: tests/project_dump_snapshots.rs
expression: out
---
Wrote ./0001-20260529T120000Z.zip (12345678 bytes).
Cleaned up the server-side dump.
