dsp-cli/tests/snapshots/project_dump_snapshots__project_dump_prose_reused.snap
---
source: tests/project_dump_snapshots.rs
expression: out
---
Downloaded existing dump (created 2026-05-20 14:03 UTC).
Wrote ./0001-20260529T120000Z.zip (12345678 bytes).
